base/applications/paybridge-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paybridge-web
  namespace: paybridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paybridge-web
  template:
    metadata:
      labels:
        app: paybridge-web
    spec:
      containers:
        - name: web
          image: dentamuhajir/paybridge-web:55ceb37
          imagePullPolicy: Always
          ports:
            - containerPort: 80
