base/applications/paybridge-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paybridge-web
  namespace: paybridge
spec:
  type: NodePort
  selector:
    app: paybridge-web
  ports:
    - port: 80
      targetPort: 80
