base/applications/paybridge-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paybridge-web-ingress
  namespace: paybridge
spec:
  ingressClassName: nginx
  rules:
    - host: web.paybridge.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paybridge-web
                port:
                  number: 80
